spacing issue

--- a/src/app/shared/object-list/search-result-list-element/collection-search-result/collection-search-result-list-element.component.scss
+++ b/src/app/shared/object-list/search-result-list-element/collection-search-result/collection-search-result-list-element.component.scss
@@ -2,4 +2,5 @@
     background-color: white;
     border-radius: 0px;
     padding: 10px;
+    margin-top: 10px;
 }
